--- a/src/App.scss
+++ b/src/App.scss
@@ -15,16 +15,14 @@
   
   .editor {
     text-align: left;
-    // width: 800px;
     margin:auto;
-    width: 100%;
+    width: 90%;
     max-width: 800px;
-    min-height: 400px;
+    // min-height: 400px;
   }
   
   .preview {
     text-align: left;
-    // width: 800px;
     margin:auto;
     width: 100%;
     max-width: 800px;
