--- a/src/App.scss
+++ b/src/App.scss
@@ -9,16 +9,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* font-size: calc(10px + 2vmin); */
-    /* color: white; */
   }
   
   .editor {
     text-align: left;
     margin:auto;
+    width: 100% !important;
     width: 90%;
     max-width: 800px;
-    // min-height: 400px;
   }
   
   .preview {
@@ -26,18 +24,16 @@
     margin:auto;
     width: 100%;
     max-width: 800px;
-    min-height: 400px;
+    min-height: 100px;
   }
   .textarea {
     width: 99%;
     min-height: 200px;
   }
-  
-  blockquote {
-    border-left: 3px solid #224b4b;
-    color: #224b4b;
-    padding-left: 5px;
-    margin-left: 25px;
+
+  .btnmargin {
+    margin-left: 1px;
+    margin-right: 1px;
   }
   
   #preview {
@@ -55,7 +51,7 @@
     }
   
     code {
-      background: gray;
+      background: rgb(124, 197, 136);
       font-size: 0.875rem;
       font-weight: bold;
     }
@@ -63,7 +59,7 @@
     pre {
       display: block;
       overflow: auto;
-      background: white;
+      background: rgb(124, 197, 136);
       padding: 5px;
       line-height: 1.2;
     }
@@ -89,7 +85,7 @@
   
     img {
       display: block;
-      max-width: 90%;
+      max-width: 80%;
       margin: 2rem auto;
     }
   }
